--- a/modules/project-comments/client/views/public-comments/comments-eao.html
+++ b/modules/project-comments/client/views/public-comments/comments-eao.html
@@ -1,16 +1,13 @@
 <div class="public-comment-period-view">
-
-    <div class="breadcrumbs">{{project.name}} &nbsp;&rsaquo;&nbsp; Public Comment Periods</div>
-
+    
     <div class="view-title-container">
-        <h1>Public Comment Periods</h1>
+        <h1>{{project.name}} &nbsp;&rsaquo;&nbsp; Public Comment Periods</h1>
     </div>
-
+    
     <div class="view-body-container">
-
+        
         <div class="public-comment-alert">
             <h2>Public Comment Period is Now Open!</h2>
-            <h3><strong>June 1</strong> - <strong>July 15, 2016</strong></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <ul class="public-comment-period-document-links">
                 <li><a class="document-name" href="#">Application Information Requirements</a><a href="#">[ VIEW FILES ]</a></li>
@@ -19,16 +16,72 @@
             <button class="btn btn-success" data-toggle="modal" data-target="#submitCommentModal">
                 Click Here to Submit a Comment
             </button>
-            <div class="open-house-dates">
-                <h4>Open House Dates</h4>
-                <ul>
-                    <li>June 15th, 2016 at Some Location</li>
-                    <li>July 10th, 2016 at Some Location</li>
-                </ul>
+        </div>
+        
+        <!-- PROTOTYPE EAO ROW TEMPLATES  -->
+        <div>
+            <ul class="tab-container nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#pendingReview" aria-controls="pendingReview" role="tab" data-toggle="tab">Pending Review (X)</a></li>
+                <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Deferred (X)</a></li>
+                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Published (X)</a></li>
+                <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Rejected (X)</a></li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane active" role="tabpanel" id="pendingReview">
+                    <div class="public-comment-panel panel panel-default">
+                        <table ng-table="tableParams" show-filter="true" class="eao-comment-table table table-striped table-hover">			
+                            <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
+                                <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Posted by'" filter="{'name':'text'}" sortable="'name'">
+                                    <h2 class="comment-title">Anonymous</h2>
+                                    <div ng-init="toggleProject.desc = (false)">
+                                        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    </div>
+                                </td>
+                                <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
+                                <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
+                                <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
+                                <td class="attachment-col" header-class="'attachment-col no-mobile'"><span class="glyphicon glyphicon-paperclip"></span></td>
+                                <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
+                                <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'" ><span class="label label-info">EXPIRES IN 7 DAYS</span></td>
+                            </tr>
+                            <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
+                                <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Headline'" filter="{'name':'text'}" sortable="'name'">
+                                    <h2 class="comment-title">Anonymous</h2>
+                                    <div ng-init="toggleProject.desc = (false)">
+                                        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    </div>
+                                </td>	
+                                <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
+                                <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
+                                <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
+                                <td class="attachment-col" header-class="'attachment-col no-mobile'"><span class="glyphicon glyphicon-paperclip"></span></td>
+                                <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
+                                <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'" ><span class="label label-warning">EXPIRES IN 7 DAYS</span></td>
+                            </tr>
+                            <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
+                                <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Headline'" filter="{'name':'text'}" sortable="'name'">
+                                    <h2 class="comment-title">Anonymous</h2>
+                                    <div ng-init="toggleProject.desc = (false)">
+                                        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    </div>
+                                </td>	
+                                <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
+                                <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
+                                <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
+                                <td class="attachment-col" header-class="'attachment-col no-mobile'"></td>
+                                <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
+                                <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'"><span class="label label-danger">EXPIRES IN 1 DAY</span></td>
+                            </tr> 
+                            <tr ng-if="!$data || $data.length === 0">
+                                <td colspan="7">No records found.</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
-
-
+        <!-- / EAO ROW TEMPLATES  -->
+        
     </div>
 </div>
 
@@ -43,50 +96,24 @@
 				<h3 class="modal-title">Public Comment  &nbsp;&rsaquo;&nbsp; Anonymous</h3>
 			</div>
 			<div class="modal-body">
-
+                
                 <!-- STATUS ALERTS -->
                 <div class="eao-alerts">
                     <div class="alert alert-danger hidden">
                         Review period for this comment expires in <strong>1 Days</strong>
                     </div>
-                    <div class="alert alert-info hidden">
+                    <div class="alert alert-info">
                         Review period for this comment expires in <strong>7 Days</strong>
                     </div>
-
-                    <!-- DEFER NOTES -->
-                    <div class="alert alert-info eao-comment-notes hidden">
-                        <div class="detail-row">
-                            <label>Deferred by:</label><span class="value">User Name</span>
-                        </div>
-                        <div class="notes detail-row">
-                            <span class="value wrap-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</span>
-                        </div>
-                        <div class="date">MM/DD/YYYY</div>
-                    </div>
-
-                    <!-- REJECTION NOTES -->
-                    <div class="alert alert-danger eao-comment-notes">
-                        <div class="detail-row">
-                            <label>Rejected by:</label><span class="value">User Name</span>
-                        </div>
-                        <div class="detail-row">
-                            <label>Reason for Rejection:</label><span class="value">Rejection Reason Here</span>
-                        </div>
-                        <div class="notes detail-row">
-                            <span class="value wrap-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</span>
-                        </div>
-                        <div class="date">MM/DD/YYYY</div>
-                    </div>
-
                 </div>
-
+                
                 <section class="comment-info">
                     <label>Posted March 21, 2016</label>
                     <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
                 </section>
-
+                
                 <!-- PILLARS & VC'S -->
-                <section class="pillers-vc">
+                <section class="pillers-vc">  
                     <!-- DISPLAY VALUES -->
                     <div class="pillers-vc-display hidden">
                         <div class="detail-row">
@@ -97,7 +124,7 @@
                             <label>Valued Components</label>
                             <span class="value">Air Quality, Water Quality, Regulatory Process, Rights & Titles</span>
                         </div>
-                    </div><!-- / DISPLAY VALUES -->
+                    </div><!-- / DISPLAY VALUES --> 
                     <!-- PROPONENT ASSIGN -->
                     <div class="row">
                         <div class="col-sm-6">
@@ -105,7 +132,7 @@
                                 <label>Assign Pillars</label>
                                 <div class="pick-list panel panel-default" data-toggle="buttons">
                                     <label class="btn btn-default active">
-                                        <input type="checkbox" autocomplete="off">Pillar 1
+                                        <input type="checkbox" autocomplete="off">Pillar 1 
                                     </label>
                                     <label class="btn btn-default">
                                         <input type="checkbox" autocomplete="off">Pillar 2
@@ -134,7 +161,7 @@
                         </div>
                     </div><!-- / PROPONENT ASSIGN -->
                 </section><!-- / PILLARS & VC'S -->
-
+                
                 <!-- ATTACHMENTS -->
                 <section>
                     <div class="detail-row">
@@ -183,30 +210,14 @@
                                 </button>
                             </li>
                         </ul>
-                    </div>
+                    </div> 
                 </section><!-- / ATTACHMENTS -->
-
-                <section>
-                    <div class="detail-row">
-                        <label>Set Comment Status</label>
-                        <div class="btn-group comment-status-btns" data-toggle="buttons">
-                            <label class="btn btn-default active">
-                                <input type="radio" name="commentStatus" id="deferComment" autocomplete="off" checked> Defer
-                            </label>
-                            <label class="btn btn-danger">
-                                <input type="radio" name="commentStatus" id="rejectComment" autocomplete="off"> Reject
-                            </label>
-                            <label class="btn btn-success">
-                                <input type="radio" name="commentStatus" id="publishComment" autocomplete="off"> Publish
-                            </label>
-                        </div>
-                    </div>
-                </section>
-
+                
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="close">Cancel</button>
-                <button type="button" class="btn btn-success" data-dismiss="close" disabled="disabled">Update</button>
+                <button type="button" class="btn btn-danger" data-dismiss="close">Reject</button>
+                <button type="button" class="btn btn-default" data-dismiss="close">Defer</button>
+                <button type="button" class="btn btn-success" data-dismiss="close" disabled="disabled">Publish</button>
 			</div>
 		</div>
 	</div>
@@ -222,7 +233,7 @@
 				</button>
 				<h3 class="modal-title">Submit a Comment</h3>
 			</div>
-
+            
             <!-- COMMENT FORM - STEP 1 -->
             <form class="comment-form-1 hidden">
                 <div class="modal-body">
@@ -239,10 +250,10 @@
                 </div>
             </form>
             <!-- / COMMENT FORM - STEP 1 -->
-
+            
             <!-- COMMENT FORM - STEP 2 -->
             <form class="comment-form">
-                <div class="modal-body">
+                <div class="modal-body">  
                     <fieldset>
                         <div class="row">
                             <div class="form-group col-sm-12 col-md-6">
@@ -319,7 +330,7 @@
                     <button type="button" class="btn btn-success" data-dismiss="modal">Submit Comment</button>
                 </div>
             </form><!-- / COMMENT FORM - STEP 2 -->
-
+            
             <!-- COMMENT FORM - STEP 3 -->
             <div class="comment-submit-success hidden">
                 <div class="modal-body">
@@ -331,7 +342,7 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
                 </div>
             </div>
-
+            
             <div class="comment-submit-error hidden">
                 <div class="modal-body">
                     <div class="alert alert-danger">
@@ -343,7 +354,7 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
                 </div>
             </div><!-- / COMMENT FORM - STEP 3 -->
-
+            
 		</div>
 	</div>
 </div><!-- / SUBMIT COMMENT MODAL -->
