--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -2,50 +2,46 @@
   <div class="panel panel-default">
 
     <div class="panel-heading clearfix">
-        <h2>{{s.caption}}</h2>
-        <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="s.project" x-permissions="listArtifacts"></tmpl-permissions-gear>
-
-        <!-- ARTIFACT MENU -->
-        <div class="hidden" ng-if="!s.public">
-            <div class="artifacts-list-actions pull-right clearfix">
-                <div class="artifacts-dropdown dropdown pull-left" ng-if="s.allowAddItem">
-                    <div class="input-group" data-toggle="dropdown">
-                        <input class="entryInput form-control input-sm" id="query" name="query" type="text" placeholder="Select a Template Type" ng-model="s.addtype.name"></input>
-                        <span class="input-group-btn">
-						    <button class="btn btn-default btn-sm" type="button" ng-disabled="!s.addtype" ng-click="$event.stopPropagation();s.addType()">Add Item</button>
-						</span>
-                    </div>
-                </div>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="query">
-                    <li ng-repeat="type in s.availableTypes | orderBy:'name'">
-                        <a ng-click="s.selectType(type)">{{type.name}}</a>
-                    </li>
-                </ul>
-            </div><!-- / ARTIFACT MENU -->
-        </div>
+      <h2>{{s.caption}}</h2>
+      <button class="btn btn-default btn-sm " type="button" ng-click="$event.stopPropagation();s.openAddTypes()">Add
+        Item
+      </button>
+      <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="s.project"
+                             x-permissions="listArtifacts"></tmpl-permissions-gear>
     </div>
 
     <!-- TABLE -->
     <table class="table table-hover" ng-table="s.tableParams" show-filter="true">
-        <tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
-            <td class="artifact-name-col" header-class="'artifact-name-col'" data-title="'Name'" filter="{'name':'text'}" sortable="'name'">{{o.name}}</td>
-            <td data-title="'Version'" filter="{'version':'text'}" class="text-center" sortable="'version'">{{o.version}}</td>
-            <td data-title="'Stage'" filter="{'stage':'text'}" class="text-center" sortable="'stage'">{{o.stage}}</td>
-            <!-- <td data-title="'Desc.'" filter="{'shortDescription':'text'}" class="text-center" sortable="'shortDescription'">{{o.shortDescription}}</td> -->
-            <td data-title="'Last Update'" class="text-center" filter="{'dateUpdated':'text'}" sortable="'dateUpdated'">{{ o.dateUpdated | date : format : timezone }}</td>
-            <td data-title="'Updated By'" class="text-center" filter="{'updatedBy.username':'text'}" sortable="'updatedBy.username'">{{o.updatedBy.username}}</td>
-            <td class="actions-col action-x2" header-class="'actions-col action-x2'">
-                <a class="btn btn-link btn-sm" ng-if="o.userPermissions.write" ng-click="$event.stopPropagation()" ui-sref="p.artifact.edit({artifactId:o._id})">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-                <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="o"></tmpl-permissions-gear>
-            </td>
-        </tr>
-        <tr ng-if="!$data || $data.length === 0">
-            <td colspan="6">
-                <span>{{s.noDataMessage}}</span>
-            </td>
-        </tr>
+      <tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
+        <td class="artifact-name-col" header-class="'artifact-name-col'" data-title="'Name'" filter="{'name':'text'}"
+            sortable="'name'">{{o.name}}
+        </td>
+        <td data-title="'Version'" filter="{'version':'select'}" filter-data="s.versionArray" class="text-center"
+            sortable="'version'">{{o.version}}
+        </td>
+        <td data-title="'Stage'" filter="{'stage':'select'}" filter-data="s.stageArray" class="text-center"
+            sortable="'stage'">{{o.stage}}
+        </td>
+        <!-- <td data-title="'Desc.'" filter="{'shortDescription':'text'}" class="text-center" sortable="'shortDescription'">{{o.shortDescription}}</td> -->
+        <td data-title="'Last Update'" class="text-center" filter="{'dateUpdated':'text'}" sortable="'dateUpdated'">{{
+          o.dateUpdated | date : format : timezone }}
+        </td>
+        <td data-title="'Updated By'" class="text-center" filter="{'updatedBy.username':'text'}"
+            sortable="'updatedBy.username'">{{o.updatedBy.username}}
+        </td>
+        <td class="actions-col action-x2" header-class="'actions-col action-x2'">
+          <a class="btn btn-link btn-sm" ng-if="o.userPermissions.write" ng-click="$event.stopPropagation()"
+             ui-sref="p.artifact.edit({artifactId:o._id})">
+            <span class="glyphicon glyphicon-pencil"></span>
+          </a>
+          <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="o"></tmpl-permissions-gear>
+        </td>
+      </tr>
+      <tr ng-if="!$data || $data.length === 0">
+        <td colspan="6">
+          <span>{{s.noDataMessage}}</span>
+        </td>
+      </tr>
     </table><!-- / TABLE -->
 
   </div>
